--- a/khan-exercises/exercises/reading_stem_and_leaf_plots.html
+++ b/khan-exercises/exercises/reading_stem_and_leaf_plots.html
@@ -28,28 +28,29 @@
 				}
 			}) ];
 		})</var>
-		<var id="LOCATION">randFromArray([ "grocery store", "department store", "zoo" ])</var>
+		<var id="LOCATION">randFromArray([ "winkel", "kledingwinkel", "dierentuin" ])</var>
 		<var id="ITEM">
 			{
-				"grocery store": fruit(1),
-				"department store": clothing(1),
-				"zoo": animal(1)
+				"winkel": fruit(1),
+				"kledingwinkel": clothing(1),
+				"dierentuin": dier(1)
 			}[ LOCATION ]
 		</var>
 	</div>
 
 	<div class="problem">
-		<p data-if="LOCATION === 'grocery store'" class="spin">
-			{The buyer for|A statistician for|An executive of} a chain of supermarkets created the following stem-and-leaf plot
-			showing the number of <var>plural( ITEM )</var> at each of the stores:
+		<p data-if="LOCATION === 'winkel'" class="spin">
+			De inkoper voor een winkelketen maakte het onderstaande steelbladdiagram om het aantal
+			<var>plural( ITEM )</var> in elke winkel aan te geven:
 		</p>
-		<p data-if="LOCATION === 'department store'" class="spin">
-			{The buyer for|A statistician for|The regional manager of} a chain of department stores created the following stem-and-leaf plot
-			showing the number of <var>plural( ITEM )</var> at each of the stores:
+		<p data-if="LOCATION === 'kledingwinkel'" class="spin">
+			De inkoper voor een warenhuisketen maakte het onderstaande steelbladdiagram om het aantal
+			<var>plural( ITEM )</var> in elke winkel aan te geven:
 		</p>
-		<p data-if="LOCATION === 'zoo'" class="spin">
-			{The government|A conservation group|A zookeeper} {created|published} the following stem-and-leaf plot
-			showing the number of <var>plural( ITEM )</var> at each major zoo in the country:
+		<p data-if="LOCATION === 'dierentuin'" class="spin">
+			Een dierenverzorger maakte het onderstaande steelbladdiagram om het aantal
+			<var>plural( ITEM )</var> in elke grote dierentuin in het land aan te geven:
+		</p>
 		</p>
 		<p>
 			<code>
@@ -72,12 +73,12 @@
 
 	<div class="hints">
 		<p>
-			The left column of the stem and leaf plot represents the tens place; each number on the right side
-			represents the ones place for the number of <var>plural( ITEM )</var> at a <var>LOCATION</var>.
+			De linker kolom van het steelbladdiagram geeft de tientallen aan; elk getal aan de rechterkant vertegenwoordigt de eenheden voor het aantal
+			<var>plural( ITEM )</var> in de <var>LOCATION</var>.
 		</p>
 		<div>
 			<p>
-				We can combine the tens and ones places and write out the number of <var>plural( ITEM )</var> at each <var>LOCATION</var> on the right:
+				We kunnen de tientallen en eenheden combineren om het aantal <var>plural( ITEM )</var> in elk <var>LOCATION</var> aan de rechterkant op te schrijven:
 			</p>
 			<p>
 				<code>
@@ -112,18 +113,18 @@
 			</p>
 		</div>
 		<div>
-			<p>Now we know the number of <var>plural( ITEM )</var> at the different <var>plural( LOCATION )</var>:</p>
+			<p>Nu weten we het aantal <var>plural( ITEM )</var> in elke <var>plural( LOCATION )</var>:</p>
 			<p><code>\qquad</code><var>toSentenceTex( RAW_DATA )</var></p>
 		</div>
 		<div>
 			<p>
-			<span data-if="TYPE === 'smallest'">What was the fewest number of <var>plural( ITEM )</var> at any one <var>LOCATION</var>?</span>
-			<span data-else-if="TYPE === 'largest'">What was the largest number of <var>plural( ITEM )</var> at any one <var>LOCATION</var>?</span>
+			<span data-if="TYPE === 'smallest'">Wat was het kleinste aantal <var>plural( ITEM )</var> in één <var>LOCATION</var>?</span>
+			<span data-else-if="TYPE === 'largest'">Wat was het grootste aantal <var>plural( ITEM )</var> in één <var>LOCATION</var>?</span>
 			<span data-else>
-				How many <var>plural( LOCATION )</var> have
-				<span data-if="TYPE === 'how-many'">exactly</span>
-				<span data-if="TYPE === 'less-than'">fewer than</span>
-				<span data-if="TYPE === 'greater-than'">more than</span>
+				Hoe veel <var>plural( LOCATION )</var> hebben
+				<span data-if="TYPE === 'how-many'">precies</span>
+				<span data-if="TYPE === 'less-than'">minder dan</span>
+				<span data-if="TYPE === 'greater-than'">meer dan</span>
 				<var>plural( AMOUNT, ITEM )</var>?</p>
 			</span>
 			<p data-if="SOLUTION > 0">
@@ -157,13 +158,13 @@
 				</code>
 			</p>
 			<p><strong>
-				<span data-if="TYPE === 'smallest'">The <var>LOCATION</var> with the fewest <var>plural( ITEM )</var> had <var>plural( SOLUTION, ITEM )</var>.</span>
-				<span data-else-if="TYPE === 'largest'">The <var>LOCATION</var> with the most <var>plural( ITEM )</var> had <var>plural( SOLUTION, ITEM)</var>.</span>
+				<span data-if="TYPE === 'smallest'">De <var>LOCATION</var> met de minste <var>plural( ITEM )</var> had <var>plural( SOLUTION, ITEM )</var>.</span>
+				<span data-else-if="TYPE === 'largest'">De <var>LOCATION</var> met de meeste <var>plural( ITEM )</var> had <var>plural( SOLUTION, ITEM )</var>.</span>
 				<span data-else>
-					<var>plural( SOLUTION, LOCATION )</var> <var>plural( "has", "have", SOLUTION )</var>
-					<span data-if="TYPE === 'how-many'">exactly</span>
-					<span data-if="TYPE === 'less-than'">fewer than</span>
-					<span data-if="TYPE === 'greater-than'">more than</span>
+					<var>plural( SOLUTION, LOCATION )</var> <var>plural( "heeft", "hebben", SOLUTION )</var>
+					<span data-if="TYPE === 'how-many'">precies</span>
+					<span data-if="TYPE === 'less-than'">minder dan</span>
+					<span data-if="TYPE === 'greater-than'">meer dan</span>
 					<var>plural( AMOUNT, ITEM )</var>.
 				</span>
 			</strong></p>
@@ -183,7 +184,7 @@
 				<var id="SOLUTION">_.reduce( RAW_DATA, function( memo, num ) { return num === AMOUNT ? ++memo : memo }, 0 )</var>
 			</div>
 
-			<p class="question">How many <var>plural( LOCATION )</var> have exactly <var>plural( AMOUNT, ITEM )</var>?</p>
+			<p class="question">Hoe veel <var>plural( LOCATION )</var> hebben precies <var>plural( AMOUNT, ITEM )</var>?</p>
 
 			<div class="solution" data-forms="integer"><var>SOLUTION</var></div>
 		</div>
@@ -196,7 +197,7 @@
 				<var id="SOLUTION">_.reduce( RAW_DATA, function( memo, num ) { return num &lt; AMOUNT ? ++memo : memo }, 0 )</var>
 			</div>
 
-			<p class="question">How many <var>plural( LOCATION )</var> have fewer than <var>plural( AMOUNT, ITEM )</var>?</p>
+			<p class="question">Hoe veel <var>plural( LOCATION )</var> hebben minder dan <var>plural( AMOUNT, ITEM )</var>?</p>
 
 			<div class="solution" data-forms="integer"><var>SOLUTION</var></div>
 		</div>
@@ -209,7 +210,7 @@
 				<var id="SOLUTION">_.reduce( RAW_DATA, function( memo, num ) { return num &gt; AMOUNT ? ++memo : memo }, 0 )</var>
 			</div>
 
-			<p class="question">How many <var>plural( LOCATION )</var> have more than <var>plural( AMOUNT, ITEM )</var>?</p>
+			<p class="question">Hoe veel <var>plural( LOCATION )</var> hebben meer dan <var>plural( AMOUNT, ITEM )</var>?</p>
 
 			<div class="solution" data-forms="integer"><var>SOLUTION</var></div>
 		</div>
@@ -223,8 +224,8 @@
 			</div>
 
 			<p class="question">
-				<span data-if="TYPE === 'smallest'">What was the fewest number of <var>plural( ITEM )</var> at any one <var>LOCATION</var>?</span>
-				<span data-if="TYPE === 'largest'">What was the largest number of <var>plural( ITEM )</var> at any one <var>LOCATION</var>?</span>
+				<span data-if="TYPE === 'smallest'">Wat was het kleinste aantal <var>plural( ITEM )</var> in een <var>LOCATION</var>?</span>
+				<span data-if="TYPE === 'largest'">Wat was het grootste aantal <var>plural( ITEM )</var> in een <var>LOCATION</var>?</span>
 			</p>
 
 			<div class="solution" data-forms="integer"><var>SOLUTION</var></div>
