Vertalingen exercises over time

--- a/khan-exercises/exercises/angle_bisector_theorem.html
+++ b/khan-exercises/exercises/angle_bisector_theorem.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie graphie-helpers graphie-geometry math-format">
 <head>
 	<meta charset="UTF-8" />
-	<title>Angle Bisector Theorem</title>
+	<title>Bissectrice regel</title>
 	<script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -49,7 +49,7 @@
 				<var id="AC">TR_C.niceSideLengths[ 2 ]</var>
 		</div>
 		<div class="problem" data-tt="exercise3">
-			What is the length of the side AC? 
+			Wat is de lengte van zijde CD?
 		</div>
 		<div class="question">
 			<div class="graphie">
@@ -63,9 +63,9 @@
 			</div>
 		</div>
 		<div class="hints">
-			<p data-tt="hint1">Angles <code>DAB</code> and <code>DAC</code> are equal.</p>
-			<p data-tt="hint2">Therefore <code>AD</code> is the bisector of <code>CAB</code></p>
-			<p data-tt="hint3">Angle Bisector Theorem states that <code>\dfrac{ AB }{ BD }	= \dfrac{ AC }{ CD }</code></p>
+			<p data-tt="hint1">Hoeken <code>DAB</code> en <code>DAC</code> zijn hetzelfde.</p>
+			<p data-tt="hint2">Daarom is <code>AD</code> de bissectrice van <code>CAB</code></p>
+			<p data-tt="hint3">Volgens de bissectrice regel geldt dat <code>\dfrac{ AB }{ BD }	= \dfrac{ AC }{ CD }</code></p>
 		</div>
 
 
@@ -76,7 +76,7 @@
 					<var id="AC">( TEMP_AB * TEMP_CD / TEMP_BD ).toFixed( 1 )</var>
 				</div>	
 			<div class="problem">
-					What is the length of the side AC? (Round to 1 decimal place). 
+					Wat is de lengte van zijde AC? (Afronden op 1 decimaal). 
 				</div>
 				<div class="solution"><var>AC</var></div>
 				<div class="hints"  data-apply="appendContents">
@@ -92,7 +92,7 @@
 						<var id="SIDES_C">[ [ 1,2 ], [ ]  ]</var>
 				</div>
 				<div class="problem">
-					What is the length of the side AB? (Round to 1 decimal place). 
+					Wat is de lengte van zijde AB? (Afronden op 1 decimaal).
 				</div>
 				<div class="solution"><var>AB</var></div>
 				<div class="hints"  data-apply="appendContents">
@@ -108,7 +108,7 @@
 						<var id="SIDES_C">[ [ 2 ], [1 ]  ]</var>
 				</div>
 				<div class="problem">
-					What is the length of the side CD?  (Round to 1 decimal place).
+					Wat is de lengte van zijde CD?  (Afronden op 1 decimaal).
 				</div>
 				<div class="solution"><var>CD</var></div>
 				<div class="hints"  data-apply="appendContents">
@@ -124,7 +124,7 @@
 						<var id="SIDES_C">[ [ 1, 2 ], [ ]  ]</var>
 				</div>
 				<div class="problem">
-					What is the length of the side BD?  (Round to 1 decimal place).
+					Wat is de lengte van zijde BD? (Afronden op 1 decimaal).
 				</div>
 				<div class="solution"><var>BD</var></div>
 				<div class="hints"  data-apply="appendContents">
