--- a/khan-exercises/exercises/trigonometry_1.html
+++ b/khan-exercises/exercises/trigonometry_1.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie math-format">
 <head>
 	<meta charset="UTF-8" />
-	<title>Trigonometry 1</title>
+	<title>Goniometrie 1</title>
 	<script src="../khan-exercise.js"></script>
 	<script>
 	function fractionSQRoot(b, root){
@@ -122,12 +122,13 @@
 				<div class="problems">
 					<div id="sinTrig1">
 						<div class="problem">
-							<p data-tt="question1"><code>\overline{AC}</code> is <code><var>AC</var></code> units long</p>
-							<p data-tt="question2"><code>\overline{BC}</code> is <code><var>BC</var></code> units long</p>
-							<p data-tt="question3"><code>\overline{AB}</code> is <code><var>AB_STRING</var></code> units long</p>
+							
+							<p><code>\overline{AC}</code> is <code><var>AC</var></code> eenheden lang</p>
+							<p><code>\overline{BC}</code> is <code><var>BC</var></code> eenheden lang</p>
+							<p><code>\overline{AB}</code> is <code><var>AB_STRING</var></code> eenheden lang</p>
 						</div>
 						<div class="question">
-							<p data-tt="question4">What is <code>\sin(\angle <var>ANGLE</var>)</code> ?</p>
+							<p data-tt="question4">Wat is <code>\sin(\angle <var>ANGLE</var>)</code> ?</p>
 
 							<div class="graphie">
 								betterTriangle( BC, AC, "A", "B", "C", BC, AC, AB_STRING );
@@ -146,10 +147,10 @@
 						</ul>
 
 						<div class="hints">
-							<p><b>SOH</b> CAH TOA</p>
-							<p data-tt="hint1"><b>S</b>in = <b>O</b>pposite over <b>H</b>ypotenuse</p>
-							<p data-tt="hint2">opposite <code>= \overline{<var>OPPOSITE_NAME</var>} = <var>OPPOSITE_VALUE</var></code></p>
-							<p data-tt="hint3">hypotenuse <code>= \overline{<var>HYPOTENUSE_NAME</var>} = <var>AB_STRING</var></code></p>
+							<p><b>SOS</b> CAS TOA</p>
+							<p data-tt="hint1"><b>S</b>in = <b>O</b>verstaande zijde gedeeld door de <b>S</b>chuine zijde.</p>
+							<p data-tt="hint2">Overstaande zijde<code>= \overline{<var>OPPOSITE_NAME</var>} = <var>OPPOSITE_VALUE</var></code></p>
+							<p data-tt="hint3">Schuine zijde <code>= \overline{<var>HYPOTENUSE_NAME</var>} = <var>AB_STRING</var></code></p>
 							<p><code>\sin(\angle <var>ANGLE</var>)=<var>SIMPLE_SIN</var></code></p>
 							<p data-if="SIN !== SIMPLE_SIN"><code>=<var>SIN</var></code></p>
 						</div>
@@ -157,12 +158,12 @@
 
 					<div id="cosTrig1" data-type="sinTrig1">
 						<div class="problem">
-							<p data-tt="hint4"><code>\overline{AC}</code> is <code><var>AC</var></code> units long</p>
-							<p data-tt="hint5"><code>\overline{BC}</code> is <code><var>BC</var></code> units long</p>
-							<p data-tt="hint6"><code>\overline{AB}</code> is <code><var>AB_STRING</var></code> units long</p>
+							<p><code>\overline{AC}</code> is <code><var>AC</var></code> eenheden lang</p>
+							<p><code>\overline{BC}</code> is <code><var>BC</var></code> eenheden lang</p>
+							<p><code>\overline{AB}</code> is <code><var>AB_STRING</var></code> eenheden lang</p>
 						</div>
 						<div class="question">
-							<p data-tt="question5">What is <code>\cos(\angle <var>ANGLE</var>)</code> ?</p>
+							<p data-tt="question5">Hoe groot is <code>\cos(\angle <var>ANGLE</var>)</code> ?</p>
 
 							<div class="graphie">
 								betterTriangle( BC, AC, "A", "B", "C", BC, AC, AB_STRING );
@@ -172,10 +173,10 @@
 						<div class="solution"><code><var>COS</var></code></div>
 
 						<div class="hints">
-							<p>SOH <b>CAH</b> TOA</p>
-							<p data-tt="hint12"><b>C</b>os = <b>A</b>djacent over <b>H</b>ypotenuse</p>
-							<p data-tt="hint7">adjacent <code>= \overline{<var>ADJACENT_NAME</var>} = <var>ADJACENT_VALUE</var></code></p>
-							<p data-tt="hint8">hypotenuse <code>= \overline{<var>HYPOTENUSE_NAME</var>} = <var>AB_STRING</var></code></p>
+							<p>SOS <b>CAS</b> TOA</p>
+							<p data-tt="hint12"><b>C</b>os = <b>A</b>anliggende zijde gedeeld door de <b>S</b>chuine zijde</p>
+							<p data-tt="hint7">Aanliggende zijde <code>= \overline{<var>ADJACENT_NAME</var>} = <var>ADJACENT_VALUE</var></code></p>
+							<p data-tt="hint8">Schuine zijde <code>= \overline{<var>HYPOTENUSE_NAME</var>} = <var>AB_STRING</var></code></p>
 							<p><code>\cos(\angle <var>ANGLE</var> )=<var>SIMPLE_COS</var></code></p>
 							<p data-if="COS !== SIMPLE_COS"><code>=<var>COS</var></code></p>
 						</div>
@@ -183,12 +184,12 @@
 
 					<div id="tanTrig1" data-type="sinTrig1">
 						<div class="problem">
-							<p data-tt="hint9"><code>\overline{AC}</code> is <code><var>AC</var></code> units long</p>
-							<p data-tt="hint10"><code>\overline{BC}</code> is <code><var>BC</var></code> units long</p>
-							<p data-tt="hint11"><code>\overline{AB}</code> is <code><var>AB_STRING</var></code> units long</p>
+							<p><code>\overline{AC}</code> is <code><var>AC</var></code> eenheden lang</p>
+							<p><code>\overline{BC}</code> is <code><var>BC</var></code> eenheden lang</p>
+							<p><code>\overline{AB}</code> is <code><var>AB_STRING</var></code> eenheden lang</p>
 						</div>
 						<div class="question">
-							<p data-tt="question6">What is <code>\tan(\angle <var>ANGLE</var>)</code> ?</p>
+							<p data-tt="question6">Hoe groot is <code>\tan(\angle <var>ANGLE</var>)</code> ?</p>
 
 							<div class="graphie">
 								betterTriangle( BC, AC, "A", "B", "C", BC, AC, AB_STRING );
@@ -198,10 +199,10 @@
 						<div class="solution"><code><var>TAN</var></code></div>
 
 						<div class="hints">
-							<p>SOH CAH <b>TOA</b></p>
-							<p data-tt="hint13"><b>T</b>an = <b>O</b>pposite over <b>A</b>djacent</p>
-							<p>opposite <code>= \overline{<var>OPPOSITE_NAME</var>} = <var>OPPOSITE_VALUE</var></code></p>
-							<p>adjacent <code>= \overline{<var>ADJACENT_NAME</var>} = <var>ADJACENT_VALUE</var></code></p>
+							<p>SOS CAS <b>TOA</b></p>
+							<p data-tt="hint13"><b>T</b>an = <b>O</b>verstaande zijde gedeeld door de <b>A</b>anliggende zijde</p>
+							<p>overstaande zijde <code>= \overline{<var>OPPOSITE_NAME</var>} = <var>OPPOSITE_VALUE</var></code></p>
+							<p>aanliggende zijde <code>= \overline{<var>ADJACENT_NAME</var>} = <var>ADJACENT_VALUE</var></code></p>
 							<p><code>\tan(\angle <var>ANGLE</var>)=<var>SIMPLE_TAN</var></code></p>
 							<p data-if="TAN !== SIMPLE_TAN"><code>=<var>TAN</var></code></p>
 						</div>
