--- a/khan-exercises/exercises/markup_and_commission_word_problems.html
+++ b/khan-exercises/exercises/markup_and_commission_word_problems.html
@@ -2,7 +2,7 @@
 <html data-require="math word-problems spin graphie graphie-helpers-arithmetic">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Markup and commission word problems</title>
+    <title>Verhaal sommen over winst en provisie</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -16,24 +16,25 @@
                 <var id="TOTAL_MARKUP">roundTo(2,(MARKUP_RATE/100)*WHOLESALE).toFixed(2)</var>
             </div>
             <div class="question spin">
-                <p><var>person(1)</var>'s Furniture Store buys a <var>furniture(1)</var> at a wholesale price of $<var>WHOLESALE</var>.  If the markup rate at <var>person(1)</var>'s Furniture Store is <var>MARKUP_RATE</var>%, what is the total markup for the <var>furniture(1)</var> in dollars?
+                <p><var>person(1)</var>'s Meubel Winkel koopt een stoel met een inkoopprijs van &euro;<var>WHOLESALE</var>.  
+                Als het winstpercentage bij <var>person(1)</var>'s Meubel Winkel <var>MARKUP_RATE</var>% is, wat is dan de winst op de stoel in Euro's?
             </div>
             <p class="solution" data-forms="dollar"><var>TOTAL_MARKUP</var></p>
             <div class="hints">
                 <div>
-                    <p>Remember that a markup rate is a percentage of the wholesale price that a store adds to get a selling or retail price. The amount of markup can be found with the following equation: </p>
-                    <p><span class="hint_blue">markup rate</span> <code>\times</code> <span class="hint_green">wholesale price</span> <code>=</code> <span class="hint_pink">amount of markup</span></p>
+                    <p>Bedenk dat de winstmarge een percentage is van de inkoopprijs die de winkel daarbij optelt om de verkoopprijs te bepalen. De hoeveelheid winst kan gevonden worden met de volgende berekening: </p>
+                    <p><span class="hint_blue">winstmarge</span> <code>\times</code> <span class="hint_green">inkoopprijs</span> <code>=</code> <span class="hint_pink">winst</span></p>
                 </div>
                 <div>
-                    <p>Since the markup rate is a percentage, we have to convert it into a decimal first. Percent means "out of one hundred," so <code class="hint_blue"><var>MARKUP_RATE</var>\%</code> is equivalent to <code class="hint_blue">\displaystyle\frac{<var>MARKUP_RATE</var>}{100}</code> which is also equal to <code class="hint_blue"><var>MARKUP_RATE</var> \div 100</code>.</p>
+                    <p>Omdat de winstmarge een percentage is moeten we die eerst omzetten in een decimaal getal. Procent betekent honderdste deel, dus <code class="hint_blue"><var>MARKUP_RATE</var>\%</code> is gelijk aan <code class="hint_blue">\displaystyle\frac{<var>MARKUP_RATE</var>}{100}</code> wat ook gelijk is aan <code class="hint_blue"><var>MARKUP_RATE</var> \div 100</code>.</p>
                     <p><code class="hint_blue"><var>MARKUP_RATE</var> \div 100 = <var>(MARKUP_RATE/100).toFixed(2)</var></code>
                 </div>
                 <div>
-                    <p>Now you have all the information you need to use the formula above!</p>
+                    <p>Nu weet je alles wat nodig is om bovenstaande formule te gebruiken!</p>
                 </div>
                 <div>
-                    <p><code class="hint_blue"><var>(MARKUP_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">$<var>WHOLESALE</var></code> <code>=</code> <code class="hint_pink">$<var>TOTAL_MARKUP</var></code></p>
-                    <p class="final_answer">The amount of markup on the <var>furniture(1)</var> is <code class="hint_pink">$<var>TOTAL_MARKUP</var></code>.</p>
+                    <p><code class="hint_blue"><var>(MARKUP_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">&euro;<var>WHOLESALE</var></code> <code>=</code> <code class="hint_pink">&euro;<var>TOTAL_MARKUP</var></code></p>
+                    <p class="final_answer">De hoeveelheid winst op de stoel is <code class="hint_pink">&euro;<var>TOTAL_MARKUP</var></code>.</p>
                 </div>
             </div>
         </div>
@@ -46,29 +47,30 @@
                 <var id="RETAIL_PRICE">roundTo(2,((MARKUP_RATE/100)*WHOLESALE)+WHOLESALE)</var>
             </div>
             <div class="question spin">
-                <p>The manager at <var>person(1)</var>'s Furniture Store is trying to figure out how much to charge for a <var>furniture(1)</var> that just arrived. If the <var>furniture(1)</var> was bought at a wholesale price of $<var>WHOLESALE</var> and <var>person(1)</var>'s Furniture Store marks up all furniture by <var>MARKUP_RATE</var>%, at what price should the manager sell the <var>furniture(1)</var>?
+                <p>De manager van <var>person(1)</var>'s Meubel Winkel probeert uit te rekenen hoeveel hij kan berekenen voor een stoel die net is binnengekomen. 
+                Als de stoel was gekocht voor een inkoopprijs van &euro;<var>WHOLESALE</var> en <var>person(1)</var> heeft een winstmarge op alle meubels van <var>MARKUP_RATE</var>%, voor welke prijs zou de manager de stoel moeten verkopen?
             </div>
             <p class="solution" data-forms="dollar"><var>RETAIL_PRICE</var></p>
             <div class="hints">
                 <div>
-                    <p>In order to find the retail price, we must first find the amount of markup. Remember that a markup rate is a percentage of the wholesale price that a store adds to get a selling or retail price. With this knowledge, we can figure out the following equation:</p>
-                    <p><span class="hint_blue">markup rate</span> <code>\times</code> <span class="hint_green">wholesale price</span> <code>=</code> <span class="hint_purple">amount of markup</span></p>
+                    <p>Om de verkoopprijs te weten moeten we eerst de winstmarge berekenen. Bedenk dat de winstmarge een percentage is van de inkoopprijs die de winkel daarbij optelt om de verkoopprijs te bepalen. Met deze kennis kunnen we de volgende berekening opzetten:</p>
+                    <p><span class="hint_blue">winstmarge </span> <code>\times</code> <span class="hint_green">inkoopprijs</span> <code>=</code> <span class="hint_purple">winst</span></p>
                 </div>
                 <div>
-                    <p>Since the markup rate is a percentage, we have to convert it into a decimal first. Percent means "out of one hundred," so <code class="hint_blue"><var>MARKUP_RATE</var>\%</code> is equivalent to <code class="hint_blue">\displaystyle\frac{<var>MARKUP_RATE</var>}{100}</code> which is also equal to <code class="hint_blue"><var>MARKUP_RATE</var> \div 100</code>.</p>
+                    <p>Omdat de winstmarge een percentage is moeten we die eerst omzetten in een decimaal getal. Procent betekent honderdste deel, dus  <code class="hint_blue"><var>MARKUP_RATE</var>\%</code> is gelijk aan <code class="hint_blue">\displaystyle\frac{<var>MARKUP_RATE</var>}{100}</code> wat ook gelijk is aan <code class="hint_blue"><var>MARKUP_RATE</var> \div 100</code>.</p>
                     <p><code class="hint_blue"><var>MARKUP_RATE</var> \div 100 = <var>(MARKUP_RATE/100).toFixed(2)</var></code>
                 </div>
                 <div>
-                    <p>Now you have all the information you need to find the amount of markup!</p>
-                    <p><code class="hint_blue"><var>(MARKUP_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">$<var>WHOLESALE.toFixed(2)</var></code> <code>=</code> <code class="hint_purple">$<var>TOTAL_MARKUP</var></code></p>
+                    <p>Nu heb je alles om de winst te berekenen!</p>
+                    <p><code class="hint_blue"><var>(MARKUP_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">&euro;<var>WHOLESALE.toFixed(2)</var></code> <code>=</code> <code class="hint_purple">&euro;<var>TOTAL_MARKUP</var></code></p>
                 </div>
                 <div>
-                    <p>Since the markup rate is a percentage of the wholesale price that is added to get the retail price, we can find the retail price with the following equation:</p>
-                    <p><span class="hint_purple">amount of markup</span> <code>+</code> <span class="hint_green">wholesale price</span> <code>=</code> <span class="hint_pink">retail price</span></p>
+                    <p>Omdat de winstmarge een percentage is van de inkoopprijs kunnen we de verkoopprijs vinden met de volgende berekening:</p>
+                    <p><span class="hint_purple">winst</span> <code>+</code> <span class="hint_green">inkoopprijs</span> <code>=</code> <span class="hint_pink">verkoopprijs</span></p>
                 </div>
                 <div>
-                    <p><code class="hint_purple">$<var>TOTAL_MARKUP</var></code> <code>+</code> <code class="hint_green">$<var>WHOLESALE.toFixed(2)</var></code> <code>=</code> <code class="hint_pink">$<var>RETAIL_PRICE.toFixed(2)</var></code></p>
-                    <p class="final_answer">The retail price of the <var>furniture(1)</var> should be <code class="hint_pink">$<var>RETAIL_PRICE.toFixed(2)</var></code>.</p>
+                    <p><code class="hint_purple">&euro;<var>TOTAL_MARKUP</var></code> <code>+</code> <code class="hint_green">&euro;<var>WHOLESALE.toFixed(2)</var></code> <code>=</code> <code class="hint_pink">&euro;<var>RETAIL_PRICE.toFixed(2)</var></code></p>
+                    <p class="final_answer">De verkoopprijs van de stoel zou <code class="hint_pink">&euro;<var>RETAIL_PRICE.toFixed(2)</var></code> moeten zijn.</p>
                 </div>
             </div>
         </div>
@@ -80,24 +82,24 @@
                 <var id="TOTAL_COMMISSION">roundTo(2,(COMMISSION_RATE/100)*PRICE).toFixed(2)</var>
             </div>
             <div class="question spin">
-                <p><var>person(1)</var> works at a nearby electronics store.  <var>He(1)</var> makes a commission of <var>COMMISSION_RATE</var>% on everything <var>he(1)</var> sells.  If <var>he(1)</var> sells a <var>electronic(1)</var> for $<var>PRICE</var>, how much money does <var>person(1)</var> make in commission?</p>
+                <p><var>person(1)</var> werkt vlakbij in een electronica winkel. <var>He(1)</var> krijgt een provisie van <var>COMMISSION_RATE</var>% op alles wat <var>he(1)</var> verkoopt. Als <var>he(1)</var> een computer verkoopt voor &euro;<var>PRICE</var>, hoeveel geld is dan de provisie van <var>person(1)</var>?</p>
             </div>
             <p class="solution" data-forms="dollar"><var>TOTAL_COMMISSION</var></p>
                 <div class="hints">
                 <div>
-                    <p>A commission rate is a percentage of the retail price of an item that the seller makes if he or she can sell the item. To find the amount of commission made, use the following formula:</p>
-                    <p><span class="hint_blue">commission rate</span> <code>\times</code> <span class="hint_green">retail price</span> <code>=</code> <span class="hint_pink">amount of commission made</span></p>
+                    <p>Een provisie is een percentage van de verkoopprijs van een product dat de verkoper ontvangt als zij of hij dat product verkoopt. Om de hoeveelheid gemaakte provisie te vinden gebruik je de volgende formule:</p>
+                    <p><span class="hint_blue">provisie percentage</span> <code>\times</code> <span class="hint_green">verkoopprijs</span> <code>=</code> <span class="hint_pink">hoeveelheid provisie</span></p>
                 </div>
                 <div>
-                    <p>Since the commission rate is a percentage, we have to convert it into a decimal first. Percent means "out of one hundred," so <code class="hint_blue"><var>COMMISSION_RATE</var>\%</code> is equivalent to <code class="hint_blue">\displaystyle\frac{<var>COMMISSION_RATE</var>}{100}</code> which is also equal to <code class="hint_blue"><var>COMMISSION_RATE</var> \div 100</code>.</p>
+                    <p>Omdat de provisie een percentage is moeten we dit eerst omzetten in een decimaal getal. rocent betekent honderdste deel, dus <code class="hint_blue"><var>COMMISSION_RATE</var>\%</code> is gelijk aan <code class="hint_blue">\displaystyle\frac{<var>COMMISSION_RATE</var>}{100}</code> wat ook gelijk is aan <code class="hint_blue"><var>COMMISSION_RATE</var> \div 100</code>.</p>
                     <p><code class="hint_blue"><var>COMMISSION_RATE</var> \div 100 = <var>(COMMISSION_RATE/100).toFixed(2)</var></code>
                 </div>
                 <div>
-                    <p>Now you have all the information you need to use the formula above!</p>
+                    <p>Nu weet je alles wat nodig is om bovenstaande formule te gebruiken!</p>
                 </div>
                 <div>
-                    <p><code class="hint_blue"><var>(COMMISSION_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">$<var>PRICE</var></code> <code>=</code> <code class="hint_pink">$<var>TOTAL_COMMISSION</var></code></p>
-                    <p class="final_answer">The amount of commission <var>person(1)</var> makes by selling a <var>electronic(1)</var> is <code class="hint_pink">$<var>TOTAL_COMMISSION</var></code>.</p>
+                    <p><code class="hint_blue"><var>(COMMISSION_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">&euro;<var>PRICE</var></code> <code>=</code> <code class="hint_pink">$<var>TOTAL_COMMISSION</var></code></p>
+                    <p class="final_answer">De hoeveelheid provisie die <var>person(1)</var> krijgt door een computer te verkopen is <code class="hint_pink">&euro;<var>TOTAL_COMMISSION</var></code>.</p>
                 </div>
                 </div>
         </div>
@@ -112,29 +114,29 @@
 
             </div>
             <div class="question spin">
-                <p><var>person(1)</var> earns a base salary of $<var>BASE_SALARY</var> every week with an additional <var>COMMISSION_RATE</var>% commission on everything <var>he(1)</var> sells. If <var>person(1)</var> sold $<var>SALES</var> worth of items last week, what was <var>his(1)</var> total salary?</p>
+                <p><var>person(1)</var> verdient een basissalaris van &euro;<var>BASE_SALARY</var> per week met een toeslag van <var>COMMISSION_RATE</var>% provisie op alles wat <var>he(1)</var> verkoopt. Als <var>person(1)</var> de afgelopen week &euro;<var>SALES</var> aan goederen heeft verkocht, hoe groot was dan <var>his(1)</var> totale salaris?</p>
             </div>
             <p class="solution" data-forms="dollar"><var>TOTAL_SALARY</var></p>
                 <div class="hints">
                 <div>
-                    <p>First, find the amount of commission made by using the following formula:</p>
-                    <p><span class="hint_blue">commission rate</span> <code>\times</code> <span class="hint_green">total sales</span> <code>=</code> <span class="hint_purple">amount of commission made</span></p>
+                    <p>Bereken om te beginnen de hoeveelheid provisie met de volgende formule:</p>
+                    <p><span class="hint_blue">provisie percentage</span> <code>\times</code> <span class="hint_green">totale verkoop bedrag</span> <code>=</code> <span class="hint_purple">hoeveelheid provisie</span></p>
                 </div>
                 <div>
-                    <p>Since the commission rate is a percentage, we have to convert it into a decimal first. Percent means "out of one hundred," so <code class="hint_blue"><var>COMMISSION_RATE</var>\%</code> is equivalent to <code class="hint_blue">\displaystyle\frac{<var>COMMISSION_RATE</var>}{100}</code> which is also equal to <code class="hint_blue"><var>COMMISSION_RATE</var> \div 100</code>.</p>
+                    <p>Omdat de provisie een percentage is moeten we dit eerst omzetten in een decimaal getal. Percentage betekent honderdste deel, dus <code class="hint_blue"><var>COMMISSION_RATE</var>\%</code> is gelijk aan <code class="hint_blue">\displaystyle\frac{<var>COMMISSION_RATE</var>}{100}</code> wat ook gelijk is aan <code class="hint_blue"><var>COMMISSION_RATE</var> \div 100</code>.</p>
                     <p><code class="hint_blue"><var>COMMISSION_RATE</var> \div 100 = <var>(COMMISSION_RATE/100).toFixed(2)</var></code>
                 </div>
                 <div>
-                    <p>Now you have all the information you need to find the amount of commission made:</p>
-                    <p><code class="hint_blue"><var>(COMMISSION_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">$<var>SALES.toFixed(2)</var></code> <code>=</code> <code class="hint_purple">$<var>TOTAL_COMMISSION</var></code></p>
+                    <p>Nu weet je alles om de hoeveelheid provisie te berekenen:</p>
+                    <p><code class="hint_blue"><var>(COMMISSION_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">&euro;<var>SALES.toFixed(2)</var></code> <code>=</code> <code class="hint_purple">&euro;<var>TOTAL_COMMISSION</var></code></p>
                 </div>
                 <div>
-                    <p>We can find the total salary for <var>person(1)</var> by adding the amount of commission made to <var>his(1)</var> base salary.</p>
-                    <p><span class="hint_purple">amount of commission made</span> <code>+</code> <span class="hint_gray">base salary</span> <code>=</code> <span class="hint_pink">total salary</span></p>
+                    <p>Door de hoeveelheid provisie bij het basis salaris op te tellen weten we het totale salaris.</p>
+                    <p><span class="hint_purple">Hoeveelheid provisie</span> <code>+</code> <span class="hint_gray">basis salaris</span> <code>=</code> <span class="hint_pink">totale salaris</span></p>
                 </div>
                 <div>
-                    <p><code class="hint_purple">$<var>TOTAL_COMMISSION</var></code> <code>+</code> <code class="hint_gray">$<var>BASE_SALARY.toFixed(2)</var></code> <code>=</code> <code class="hint_pink">$<var>TOTAL_SALARY.toFixed(2)</var></code></p>
-                    <p class="final_answer">The total salary <var>person(1)</var> made last week was <code class="hint_pink">$<var>TOTAL_SALARY.toFixed(2)</var></code>.</p>
+                    <p><code class="hint_purple">&euro;<var>TOTAL_COMMISSION</var></code> <code>+</code> <code class="hint_gray">&euro;<var>BASE_SALARY.toFixed(2)</var></code> <code>=</code> <code class="hint_pink">&euro;<var>TOTAL_SALARY.toFixed(2)</var></code></p>
+                    <p class="final_answer">Het totale salaris van <var>person(1)</var> was de afgelopen week dus <code class="hint_pink">&euro;<var>TOTAL_SALARY.toFixed(2)</var></code>.</p>
                 </div>
 
                 </div>
