--- a/khan-exercises/exercises/understanding_decimals_place_value.html
+++ b/khan-exercises/exercises/understanding_decimals_place_value.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie word-problems jquery.mobile.vmouse">
 <head>
 	<meta charset="UTF-8" />
-	<title>Understanding decimals place value</title>
+	<title>Het begrijpen van de plaatswaarde van cijfers in kommagetallen.</title>
 	<script src="../khan-exercise.js"></script>
 	<style>
 		.column { float: left; height: 430px;
