--- a/khan-exercises/exercises/estimation_with_decimals.html
+++ b/khan-exercises/exercises/estimation_with_decimals.html
@@ -53,7 +53,7 @@
 				<span><var>val</var></span>
 			</div>
 			<p class="solution" data-type="multiple">
-				<span class="sol" data-forms="integer"><var>ANSWER</var></span> <var>plural( TYPES[ 2 ] )</var>
+				<span class="sol" data-forms="integer"><var>ANSWER</var></span> <var>( TYPES[ 2 ] )</var>
 			</p>
 
 			<div class="hints">
@@ -70,7 +70,7 @@
 					<span><var>round( val )</var></span>
 					<span><var>ACC += round( val )</var></span>
 				</div>
-				<p data-tt="hint2">Therefore the estimate is <code><var>ANSWER</var></code> <var>plural( TYPES[ 2 ] )</var>.</p>
+				<p data-tt="hint2">Therefore the estimate is <code><var>ANSWER</var></code> <var>( TYPES[ 2 ] )</var>.</p>
 			</div>
 		</div>
 	</div>
