--- a/khan-exercises/exercises/exponent_rules.html
+++ b/khan-exercises/exercises/exponent_rules.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math expressions">
 <head>
 	<meta charset="UTF-8" />
-	<title>Exponent rules</title>
+	<title>Rekenregels voor machten</title>
 	<script src="../khan-exercise.js"></script>
 
 	<style>
