--- a/khan-exercises/exercises/proportions_1.html
+++ b/khan-exercises/exercises/proportions_1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<script src="../khan-exercise.js"></script>
-	<title>Proportions 1</title>
+	<title>Verhoudingen 1</title>
 
 	<style>
 		.arrow {
@@ -11,7 +11,7 @@
 			font-size: 200%;
 		}
 
-		.lfrac { text-align:right; width:130px; display:inline-block;}
+		.lfrac { text-align:right; width:150px; display:inline-block;}
 		.rfrac { text-align:left; width:auto; display:inline-block; }
 	</style>
 </head>
@@ -93,9 +93,9 @@
 		</div>
 
 		<div class="hints">
-			<div style="margin-left:-20px;" class="spinealign">
+			<div style="margin-left:-40px;" class="spinealign">
 				<div class="col1 forty-sixty">
-					<p>Multiply both sides by <code><var>hint1Multiplier</var></code>
+					<p>Vermenigvuldig beide kanten met <code><var>hint1Multiplier</var></code>
 				</div>
 
 				<div class="col2 forty-sixty">
@@ -127,9 +127,9 @@
 				</div>
 			</div>
 
-			<div data-if="denominator1 === 'x' || denominator2 === 'x'"  style="margin-left:-20px;" class="spinealign">
+			<div data-if="denominator1 === 'x' || denominator2 === 'x'"  style="margin-left:-40px;" class="spinealign">
 				<div class="col1 forty-sixty">
-					<p>Multiply both sides by <code><var>hint2Multiplier</var></code>
+					<p>Vermenigvuldig beide kanten met <code><var>hint2Multiplier</var></code>
 				</div>
 				<div class="col2 forty-sixty">
 					<p>
@@ -159,24 +159,14 @@
 				</div>
 			</div>
 
-			<div style="margin-left:-20px;" class="spinealign">
-				<div class="col1 forty-sixty">
-					<p><code>x</code> is
-				</div>
-				<div class="col2 forty-sixty">
-					<p><span class="lfrac"><code>=</code></span>
-					<span class="rfrac">
-						<code>\dfrac{<var>solutionNumerator</var>}{<var>solutionDenominator</var>}</code>.
-					</span></p>
-				</div>
-			</div>
+
 
 		</div>
 
 		<div class="problems">
 			<div class="spinealign">
 				<div class="col1 forty-sixty">
-					<p>Solve for <code>x</code>.</p>
+					<p>Los op voor <code>x</code></p>
 				</div>
 				<div class="col2 forty-sixty">
 					<p>
