--- a/khan-exercises/exercises/proportions_2.html
+++ b/khan-exercises/exercises/proportions_2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<script src="../khan-exercise.js"></script>
-	<title>Proportions 2</title>
+	<title>Verhoudingen 2</title>
 
 	<style>
 		.arrow {
@@ -11,7 +11,7 @@
 			font-size: 200%;
 		}
 
-		.lfrac { text-align:right; width:130px; display:inline-block;}
+		.lfrac { text-align:right; width:180px; display:inline-block;}
 		.rfrac { text-align:left; width:auto; display:inline-block; }
 	</style>
 </head>
@@ -128,7 +128,7 @@
 		<div class="hints">
 			<div style="margin-left:-20px;" class="spinealign">
 				<div class="col1 forty-sixty">
-					<p>Multiply both sides by <code><var>hint1Multiplier</var></code>
+					<p>Vermenigvuldig beide kanten met <code><var>hint1Multiplier</var></code>
 				</div>
 
 				<div class="col2 forty-sixty">
@@ -162,7 +162,7 @@
 
 			<div data-if="denominator1 === xExpression || denominator2 === xExpression"  style="margin-left:-20px;" class="spinealign">
 				<div class="col1 forty-sixty">
-					<p>Multiply both sides by <code><var>hint2Multiplier</var></code>
+					<p>Vermenigvuldig beide kanten met <code><var>hint2Multiplier</var></code>
 				</div>
 				<div class="col2 forty-sixty">
 					<p>
@@ -195,7 +195,7 @@
 			
 			<div style="margin-left:-20px;" class="spinealign">
 				<div class="col1 forty-sixty">
-					<p><span data-if="xConstant < 0">Add</span><span data-else>Subtract</span> <code><var>abs(xConstant)</var></code> <span data-if="xConstant < 0">to</span><span data-else>from</span> each side and simplify to isolate <code>x</code></p>
+					<p><span data-if="xConstant < 0">Tel</span><span data-else>Trek</span> <code><var>abs(xConstant)</var></code> <span data-if="xConstant < 0">bij elke kant op</span><span data-else>aan iedere kant af</span> en vereenvoudig om <code>x</code> vrij te maken</p>
 				</div>
 				<div class="col2 forty-sixty">
 					<span class="lfrac">
@@ -220,13 +220,10 @@
 			
 			
 			<div style="margin-left:-20px;" class="spinealign">
-				<div class="col1 forty-sixty">
-					<p><code>x</code> is
-				</div>
 				<div class="col2 forty-sixty">
-					<p><span class="lfrac"><code>=</code></span>
+					<p><span class="lfrac">
 					<span class="rfrac">
-						<code><var>SOLUTION</var></code>.
+						<code>x =</code> <code><var>SOLUTION</var></code>
 				</div>
 			</div>
 
@@ -235,7 +232,7 @@
 		<div class="problems">
 			<div class="spinealign">
 				<div class="col1 forty-sixty">
-					<p>Solve for <code>x</code>.</p>
+					<p>Los op voor <code>x</code></p>
 				</div>
 				<div class="col2 forty-sixty">
 					<p>
