--- a/khan-exercises/exercises/rate_problems_0.5.html
+++ b/khan-exercises/exercises/rate_problems_0.5.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math word-problems">
 <head>
 	<meta charset="UTF-8" />
-	<title>Rate problems 0.5</title>
+	<title>Snelheidsproblemen 0.5</title>
 	<script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -12,48 +12,50 @@
 		<var id="RATE">( INDEX === 0 ? randRange( 5, 11 ) * 10 : randRange( 5, 25 ) )</var>
 		<var id="TIME">( INDEX === 0 ? randRange( 10, 59 ) : randRange( 2, 15 ) )</var>
 		<var id="AMOUNT">TIME * RATE</var>
-		<var data-tt="var1" id="VERB">[ "type", "eat", "hit", "paint" ][ INDEX ]</var>
-		<var data-tt="var2" id="NOUN">[ "word", "pretzel", "golf ball", "portrait" ][ INDEX ]</var>
-		<var data-tt="var3" id="TIME_UNIT">[ "minute", "hour", "hour", "week" ][ INDEX ]</var>
-		<var data-tt="var4" id="PROJECT1">[ AMOUNT + " word essay", "bag of " + AMOUNT + " pretzels", "bucket of " + AMOUNT + " golf balls", AMOUNT + " portraits" ][ INDEX ]</var>
-		<var data-tt="var5" id="PROJECT2">[ "latest essay", "bag of pretzels", "bucket of balls at the driving range", "portraits for the art exhibit" ][ INDEX ]</var>
-		<var data-tt="var6" id="PROJECT3">[ "essay", "bag", "bucket", "exhibit" ][ INDEX ]</var>
+		<var data-tt="var1" id="VERB">[ "typen", "eten", "fietsen", "schilderen" ][ INDEX ]</var>
+		<var data-tt="var2" id="NOUN">[ "woorden", "muesli repen", "kilometer", "schilderijen" ][ INDEX ]</var>
+		<var data-tt="var3" id="TIME_UNIT">[ "minuut", "uur", "uur", "week" ][ INDEX ]</var>
+		<var data-tt="var7" id="TIME_UNIT_1">[ "minuten", "uur", "uur", "weken" ][ INDEX ]</var>
+		<var data-tt="var4" id="PROJECT1">["een essay van " + AMOUNT + " woorden" , "een pak van " + AMOUNT + " muesli repen", "een afstand van " + AMOUNT + " kilometer", AMOUNT + " schilderijen" ][ INDEX ]</var>
+		<var data-tt="var5" id="PROJECT2">[ "een essay te ", "een pak met muesli repen te ", "naar huis te ", "schilderijen voor de tentoonstelling te " ][ INDEX ]</var>
+		<var data-tt="var6" id="PROJECT3">[ "bevat de essay", "zitten er in een pak", "is er dan in totaal gefietst", "zijn er dan aanwezig op de tentoonstelling" ][ INDEX ]</var>
 	</div>
 
 	<div class="problems">
 		<div id="time">
-			<p data-tt="question1" class="question">If <var>person( 1 )</var> can <var>VERB</var> <var>RATE</var> <var>NOUN</var>s per <var>TIME_UNIT</var>, how many <var>TIME_UNIT</var>s will it take <var>him( 1 )</var> to <var>VERB</var> <span data-if="INDEX !== 3">a </span> <var>PROJECT1</var>?</p>
+			<p data-tt="question1" class="question">Als <var>person( 1 )</var> <var>RATE</var> <var>NOUN</var> per <var>TIME_UNIT</var> kan <var>VERB</var>, hoeveel <var>plural(TIME_UNIT)</var> kost het <var>him( 1 )</var> om <span data-if="INDEX !== 3"> </span> <var>PROJECT1</var> te <var>VERB</var>?</p>
 			<div class="solution" data-forms="integer"><var>TIME</var></div>
 
 			<div class="hints">
-				<p data-tt="hint1" ><code>\text{amount} = \text{rate} \times \text{time}</code></p>
-				<p data-tt="hint2" ><code><var>AMOUNT</var>\text{ <var>NOUN</var>s} = <var>RATE</var>\dfrac{\text{ <var>NOUN</var>s}}{\text{<var>TIME_UNIT</var>}} \times \text{ time in <var>TIME_UNIT</var>s}</code></p>
-				<p data-tt="hint3" ><code>\text{time in <var>TIME_UNIT</var>s} = \dfrac{<var>AMOUNT</var>\text{ <var>NOUN</var>s}}{<var>RATE</var>\dfrac{\text{<var>NOUN</var>s}}{\text{<var>TIME_UNIT</var>}}}</code></p>
-				<p data-tt="hint4" ><code>\hphantom{\text{time in <var>TIME_UNIT</var>s}} = \dfrac{<var>AMOUNT</var>}{<var>RATE</var>}\text{ <var>TIME_UNIT</var>s}</code></p>
-				<p data-tt="hint5" ><code>\hphantom{\text{time in <var>TIME_UNIT</var>s}} = <var>TIME</var>\text{ <var>TIME_UNIT</var>s}</code></p>
+				<p data-tt="hint1" ><code>\text{totaal aantal <var>(NOUN)</var>} = \text{aantal <var>NOUN</var> per <var>TIME_UNIT</var>} \times \text{het aantal <var>plural(TIME_UNIT)</var>}</code></p>
+				<p data-tt="hint2" ><code><var>AMOUNT</var>\text{ <var>NOUN</var>} = <var>RATE</var>\dfrac{\text{ <var>NOUN</var>}}{\text{<var>TIME_UNIT</var>}} \times \text{het aantal <var>plural(TIME_UNIT)</var>}</code></p>
+				<p data-tt="hint3" ><code>\text{het aantal <var>plural(TIME_UNIT)</var>} = \dfrac{<var>AMOUNT</var>\text{ <var>NOUN</var>}}{<var>RATE</var>\dfrac{\text{<var>NOUN</var>}}{\text{<var>TIME_UNIT</var>}}}</code></p>
+				<p data-tt="hint4" ><code>\hphantom{\text{het aantal <var>plural(TIME_UNIT)</var>}} = \dfrac{<var>AMOUNT</var>}{<var>RATE</var>}\text{ <var>TIME_UNIT_1</var>}</code></p>
+				<p data-tt="hint5" ><code>\hphantom{\text{het aantal <var>plural(TIME_UNIT)</var>}} = <var>TIME</var></code></p>
+				
 			</div>
 		</div>
 		<div id="amount">
-			<p data-tt="question2" class="question">If <var>person( 1 )</var> can <var>VERB</var> <var>RATE</var> <var>NOUN</var>s per <var>TIME_UNIT</var> and it took <var>him( 1 )</var> <var>TIME</var> <var>TIME_UNIT</var>s to <var>VERB</var> <var>his( 1 )</var> <var>PROJECT2</var>, how many <var>NOUN</var>s did the <var>PROJECT3</var> have?</p>
+			<p data-tt="question2" class="question">Als <var>person( 1 )</var> <var>RATE</var> <var>NOUN</var> per <var>TIME_UNIT</var> kan <var>VERB</var> en het <var>him( 1 )</var> <var>TIME</var> <var>TIME_UNIT_1</var> kostte om <var>PROJECT2</var> <var>VERB</var>, hoeveel <var>NOUN</var> <var>PROJECT3</var>?</p>
 			<div class="solution" data-forms="integer"><var>AMOUNT</var></div>
 
 			<div class="hints">
-				<p data-tt="hint6" ><code>\text{amount} = \text{rate} \times \text{time}</code></p>
-				<p data-tt="hint7" ><code>\text{number of <var>NOUN</var>s} = <var>RATE</var>\dfrac{\text{<var>NOUN</var>s}}{\text{<var>TIME_UNIT</var>}} \times <var>TIME</var>\text{ <var>TIME_UNIT</var>s}</code></p>
-				<p data-tt="hint8" ><code>\hphantom{\text{number of <var>NOUN</var>s}} = <var>RATE</var> \times <var>TIME</var>\text{ <var>NOUN</var>s}</code></p>
-				<p data-tt="hint9" ><code>\hphantom{\text{number of <var>NOUN</var>s}} = <var>AMOUNT</var>\text{ <var>NOUN</var>s}</code></p>
+				<p data-tt="hint6" ><code>\text{het totaal aantal <var>NOUN</var>} = \text{aantal <var>NOUN</var> per <var>TIME_UNIT</var>} \times \text{het aantal <var>plural(TIME_UNIT)</var>}</code></p>
+				<p data-tt="hint7" ><code>\text{het totaal aantal <var>NOUN</var>} = <var>RATE</var>\dfrac{\text{<var>NOUN</var>}}{\text{<var>TIME_UNIT</var>}} \times <var>TIME</var>\text{<var>TIME_UNIT_1</var>}</code></p>
+				<p data-tt="hint8" ><code>\hphantom{\text{het totaal aan <var>NOUN</var>}} = <var>RATE</var> \times <var>TIME</var>\text{<var>(NOUN)</var>}</code></p>
+				<p data-tt="hint9" ><code>\hphantom{\text{het totaal aan <var>NOUN</var>}} = <var>AMOUNT</var></code></p>
 			</div>
 		</div>
 		<div id="rate">
-			<p data-tt="question3" class="question">If <var>person( 1 )</var> can <var>VERB</var> <span data-if="INDEX !== 3">a </span><var>PROJECT1</var> in <var>TIME</var> <var>TIME_UNIT</var>s, how many <var>NOUN</var>s per <var>TIME_UNIT</var> can <var>he( 1 )</var> <var>VERB</var>?</p>
+			<p data-tt="question3" class="question">Als <var>person( 1 )</var> <span data-if="INDEX !== 3"></span><var>PROJECT1</var> kan <var>VERB</var> in <var>TIME</var> <var>TIME_UNIT_1</var>, hoeveel <var>NOUN</var> per <var>TIME_UNIT</var> kan <var>he( 1 )</var> dan <var>VERB</var>?</p>
 			<div class="solution" data-forms="integer"><var>RATE</var></div>
 
 			<div class="hints">
-				<p data-tt="hint10" ><code>\text{amount} = \text{rate} \times \text{time}</code></p>
-				<p data-tt="hint11" ><code><var>AMOUNT</var>\text{ <var>NOUN</var>s} = \text{rate in <var>NOUN</var>s per <var>TIME_UNIT</var>} \times <var>TIME</var>\text{ <var>TIME_UNIT</var>s}</code></p>
-				<p data-tt="hint12" ><code>\text{rate in <var>NOUN</var>s per <var>TIME_UNIT</var>} = \dfrac{<var>AMOUNT</var>\text{ <var>NOUN</var>s}}{<var>TIME</var>\text{ <var>TIME_UNIT</var>s}}</code></p>
-				<p data-tt="hint13" ><code>\hphantom{\text{rate in <var>NOUN</var>s per <var>TIME_UNIT</var>}} = \dfrac{<var>AMOUNT</var>}{<var>TIME</var>}\text{<var>NOUN</var>s per <var>TIME_UNIT</var>}</code></p>
-				<p data-tt="hint14" ><code>\hphantom{\text{rate in <var>NOUN</var>s per <var>TIME_UNIT</var>}} = <var>RATE</var>\text{ <var>NOUN</var>s per <var>TIME_UNIT</var>}</code></p>
+				<p data-tt="hint10" ><code>\text{het totaal aantal <var>NOUN</var>} = \text{aantal <var>NOUN</var> per <var>TIME_UNIT</var>} \times \text{het aantal <var>plural(TIME_UNIT)</var>}</code></p>
+				<p data-tt="hint11" ><code><var>AMOUNT</var>\text{ <var>NOUN</var>} = \text{aantal <var>NOUN</var> per <var>TIME_UNIT</var>} \times <var>TIME</var>\text{ <var>TIME_UNIT_1</var>}</code></p>
+				<p data-tt="hint12" ><code>\text{aantal <var>NOUN</var> per <var>TIME_UNIT</var>} = \dfrac{<var>AMOUNT</var>\text{ <var>NOUN</var>}}{<var>TIME</var>\text{ <var>TIME_UNIT_1</var>}}</code></p>
+				<p data-tt="hint13" ><code>\hphantom{\text{aantal <var>NOUN</var> per <var>TIME_UNIT</var>}} = \dfrac{<var>AMOUNT</var>}{<var>TIME</var>}\text{<var>NOUN</var> per <var>TIME_UNIT</var>}</code></p>
+				<p data-tt="hint14" ><code>\hphantom{\text{aantal <var>NOUN</var> per <var>TIME_UNIT</var>}} = <var>RATE</var>\text{ <var>NOUN</var> per <var>TIME_UNIT</var>}</code></p>
 			</div>
 		</div>
 	</div>
