--- a/khan-exercises/exercises/standard_deviation.html
+++ b/khan-exercises/exercises/standard_deviation.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <p class="question">
-                    wat is op basis van uw steekproef, de gemiddelde leeftijd van de  <var>plural( animal( 1 ) )</var> uit de dierentuin? Wat is de standaardafwijjking?
+                    wat is op basis van uw steekproef, de gemiddelde leeftijd van de  <var>plural( animal( 1 ) )</var> uit de dierentuin? Wat is de standaardafwijking?
                     U kunt uw antwoorden afronden op tienden.
                 </p>
 
@@ -171,7 +171,7 @@
                 <div class="problem" data-else>
                     <p>
                         Je hebt de volgende leeftijden (in jaren) gevonden van  <var>plural( DATA_POINTS, animal( 1 ) )</var>
-                        willekeurig gekozen uit de<var>plural( POPULATION, animal( 1 ) )</var> uit de lokale dierentuin:
+                        willekeurig gekozen uit de <var>plural( POPULATION, animal( 1 ) )</var> uit de lokale dierentuin:
                     </p>
                     <p><code>\qquad<var>DATA.join( ",\\enspace " )</var></code></p>
                 </div>
@@ -273,7 +273,7 @@
                         </p>
                         <p>
                             Om deze onderwaardering te compenseren in plaats van eenvoudigweg de <span class="hint_purple">de populatievariantie van het gemiddelde</span>,
-                            te nemen, delen we die door<code class="hint_green">n - 1</code>.
+                            te nemen, delen we die door <code class="hint_green">n - 1</code>.
                         </p>
                         <p>
                             <code>
