--- a/khan-exercises/exercises/telling_time.html
+++ b/khan-exercises/exercises/telling_time.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math math-format graphie graphie-helpers">
+<html data-translatable data-require="math math-format graphie time">
 <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Telling time</title>
     <script src="../khan-exercise.js"></script>
     <style type="text/css">
@@ -16,7 +16,7 @@
         <var id="HOUR">randRange( 1, 12 )</var>
         <var id="MINUTE">randRange( 0, 11 ) * 5 </var>
         <var id="NICE_MINUTE"> MINUTE &gt; 5 ? MINUTE : "0" + "" + MINUTE</var>
-        <var id="AM_PM">randFromArray([ "a.m.", "p.m." ])</var>
+        <var id="AM_PM">HOUR >= 7 ? "a.m" : "p.m."</var>
     </div>
 
     <div class="problems">
@@ -24,9 +24,9 @@
             <div class="question">
                 <p data-tt="exercise1">What time is it?</p>
                 <div class="graphie" id="pie" style="float: left;">
-                    init({ range: [ [-4, 4 ], [ -4, 4] ], scale: 25 });
-                    PIECH = new analogClock( HOUR, MINUTE,  3.5, false );
-                    PIECH.draw();
+                    init({ range: [ [-4, 4 ], [ -4, 4 ] ], scale: 25 });
+                    clock = addAnalogClock({ hour: HOUR, minute: MINUTE, minuteTicks: 0, showLabels: false });
+                    clock.draw();
                 </div>
                 <div class="graphie" id="digital" style="float: left;">
                     init({ range: [ [-5, 5], [-3, 3] ], scale: 25 });
@@ -41,7 +41,7 @@
             <div class="hints">
                 <div>
                     <div class="graphie">
-                        PIECH.drawLabels();
+                             clock.drawLabels();
                     </div>
                     <div class="graphie" data-update="digital">
                         path([ [-3, -1], [3, -1], [3, 1], [-3, 1], [-3, -1] ]);
