--- a/khan-exercises/exercises/khan-exercise.html
+++ b/khan-exercises/exercises/khan-exercise.html
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div id="issue" class="info-box" style="display:none;">
-            <span class="info-box-header">Report a Problem</span>
+            <span class="info-box-header">Meld een probleem</span>
             <span id="issue-status" class="info-box-sub-description"></span>
             <form>
                 <fieldset>
