--- a/khan-exercises/exercises/equation_of_an_ellipse.html
+++ b/khan-exercises/exercises/equation_of_an_ellipse.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format expressions">
 <head>
     <meta charset="UTF-8" />
-    <title>Equation of an ellipse</title>
+    <title>De formule van een ellips</title>
     <script src="../khan-exercise.js"></script>
     <style type="text/css">
         #answer_area .short input[type=text] {
