--- a/khan-exercises/exercises/recognizing_conic_sections.html
+++ b/khan-exercises/exercises/recognizing_conic_sections.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-translatable data-require="math math-format graphie">
     <head>
-        <title>Recognizing conic sections</title>
+        <title>Krommen herkennen</title>
         <script src="../khan-exercise.js"></script>
     </head>
     <body>
