--- a/khan-exercises/exercises/equation_of_a_circle_2.html
+++ b/khan-exercises/exercises/equation_of_a_circle_2.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format expressions">
 <head>
     <meta charset="UTF-8" />
-    <title>Equation of a circle 2</title>
+    <title>Vergelijking van een cirkel 2</title>
     <script src="../khan-exercise.js"></script>
     <style type="text/css">
         #answer_area .short input[type=text] {
