--- a/khan-exercises/exercises/parabola_intuition_1.html
+++ b/khan-exercises/exercises/parabola_intuition_1.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie graphie-helpers">
 <head>
     <meta charset="UTF-8" />
-    <title>Parabola intuition 1</title>
+    <title>Parabool intuïtie 1</title>
     <script src="../khan-exercise.js"></script>
     <style>
         .info-box .mini-button {
