--- a/khan-exercises/exercises/khan-exercise.html
+++ b/khan-exercises/exercises/khan-exercise.html
@@ -25,7 +25,7 @@
                 <div id="solutionarea" class="fancy-scrollbar"></div>
                 <ul id="examples" style="display: none"></ul>
                 <div class="answer-buttons">
-                <input type="button" class="simple-button green" id="check-answer-button" value="Check Answer"/>
+                <input type="button" class="simple-button green" id="check-answer-button" value="Check Antwoord"/>
                 <input type="button" class="simple-button green" id="next-question-button" style="display:none;" name="correctnextbutton" value="Correct! Next Question..."/>
                 <div id="positive-reinforcement"><img src="/images/face-smiley.gif" /></div>
                 <span id="show-solution-button-container"></span>
